# pretty-bench

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  index.d.ts  package.json
.github/workflows/: ci.yml  release.yml
docs/: CI.md  DEMOS.md  FORMATS.md  PACKAGING.md  PUBLISHING.md
examples/: README.md
examples/specs/: bar-single-series.json  current-vs-baseline.json  history-line.json  minimal-grouped.yaml  minimal-history.toml
examples/starters/: grouped-bar.yaml  line.toml
renderer/: Cargo.toml
renderer/src/: lib.rs  render.rs  spec.rs
schemas/: pretty-bench-v1.schema.json
scripts/: assemble-release-native.mjs  build-renderer.mjs  init-examples.mjs  prepare-native.mjs  print-release-plan.mjs  render-examples.mjs  verify-release.mjs
scripts/release/: assemble.mjs  plan.json  print-plan.mjs  verify.mjs
src/: cli.js  index.js  platform.js
tests/: cli.test.mjs
tests/fixtures/: invalid-missing-series.json
